# Sikat

./: .gitignore  CLAUDE.md  README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
server/: .env.example  COMMANDS.md  Dockerfile  README.md  conftest.py  pyproject.toml
server/app/: active_commands.py  agent_bridge.py  agent_tools.py  clause_handlers.py  converse.py  creative_parse.py  crew_huddle.py  director_vocab.py  fallback_parser.py  fx_vocab.py  grammar_say.py  heuristics.py  intent_preview.py  llm.py  main.py  mood_presets.py  motion_floor.py  motion_policy.py  motion_variation.py  motion_vocab.py  observer.py  parse_hints.py  performers.py  prompts.py  reconcile.py  salvage.py  scene_context.py  scene_state.py  schema.py  session_context.py  shine_presets.py  store_actions.py  suggestion_gate.py  target_resolution.py  transitions.py  undo.py  verify.py
server/scripts/: mock_telemetry.py
server/tests/: conftest.py  helpers.py  test_agents.py  test_authored_motion_prompt.py  test_chatter.py  test_clarify.py  test_clause_routing.py  test_coarse_refine.py  test_command_cancel.py  test_converse.py  test_creative_parse.py  test_crew_voice.py  test_describe_intent.py  test_director_vocab.py  test_fallback_parser.py  test_ghost_preview_payload.py  test_grammar_say.py  test_heuristics.py  test_intent_preview.py  test_llm.py  test_llm_first.py  test_llm_target_resolution.py  test_main.py  test_motion_floor.py  test_motion_language_prompt.py  test_motion_policy.py  test_motion_vocab.py  test_observer.py  test_parse_hints.py  (+26 more)
(+124 files in other folders)
